--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://highercomve.github.io/dolly",
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
@@ -24,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "pre-deploy": "npm run build && cp CNAME build/CNAME",
-    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
