--- a/.github/workflows/master_deploy.yml
+++ b/.github/workflows/master_deploy.yml
@@ -24,6 +24,14 @@ jobs:
         npm run build
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
+      env:
+        REACT_APP_TITLE: "Dolly -- Pantahub Device Tools"
+        REACT_APP_PH_API_URL: https://api.pantahub.com
+        REACT_APP_PH_URL: https://hub.pantacor.com
+        REACT_APP_OAUTH_CLIENT_ID: prn:pantahub.com:apis:/cloner
+        REACT_APP_OAUTH_DEFAULT_SCOPE: prn:pantahub.com:apis:/base/user.readonly
+        REACT_APP_REFRESH_TIME: 5000
+        REACT_APP_REDUX_DEBUG: false
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
